# tezos-packaging-rc

./: .gitignore  README.md  default.nix  docker.nix  flake.nix  gen_systemd_service_file.py  hacks.nix  meta.json  static-overlay.nix
.buildkite/: generate-tags-pipeline.sh  pipeline-for-tags.yml  pipeline-raw.yml  pipeline.yml  shell.nix
Formula/: tezos-accuser-013-PtJakart.rb  tezos-accuser-014-PtKathma.rb  tezos-accuser-PsParisC.rb  tezos-accuser-PsQuebec.rb  tezos-accuser-PtLimaPt.rb  tezos-accuser-PtMumbai.rb  tezos-accuser-PtNairob.rb  tezos-admin-client.rb  tezos-baker-013-PtJakart.rb  tezos-baker-014-PtKathma.rb  tezos-baker-PsParisC.rb  tezos-baker-PsQuebec.rb  tezos-baker-PtLimaPt.rb  tezos-baker-PtMumbai.rb  tezos-baker-PtNairob.rb  tezos-client.rb  tezos-codec.rb  tezos-dac-client.rb  tezos-dac-node.rb  tezos-dal-node.rb  tezos-node.rb  tezos-signer.rb  tezos-smart-rollup-client-PtMumbai.rb  tezos-smart-rollup-client-PtNairob.rb  tezos-smart-rollup-node-PtMumbai.rb  tezos-smart-rollup-node-PtNairob.rb  tezos-smart-rollup-node.rb  tezos-smart-rollup-wasm-debugger.rb  tezos-tx-rollup-client-PtLimaPt.rb  tezos-tx-rollup-node-PtLimaPt.rb
baking/: pyproject.toml  setup.cfg
baking/src/tezos_baking/: __init__.py  tezos_setup_wizard.py  tezos_voting_wizard.py  wizard_structure.py
code/: pyproject.toml  setup.cfg
docker/: Dockerfile  README.md  docker-static-build.sh  docker-tezos-packages.py  supported_versions.json  update-binaries-list.sh  update-binaries.sh
docs/: baking.md  smart-rollup.md  support-policy.md  systemd.md
nix-less/: Dockerfile  (+1 more)
(+45 files in other folders)
