# SPDX-FileCopyrightText: 2023 Oxhead Alpha
# SPDX-License-Identifier: LicenseRef-MIT-OA

[build-system]
requires = ["setuptools>=44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tezos-baking"
authors = [
  { name = "Serokell", email = "tezos-packaging@serokell.io" },
]
description = "Package that provides systemd services that orchestrate other services from Tezos packages"
license = { text = "LicenseRef-MIT-OA" }
requires-python = ">=3.8"
dynamic = ["version"]
readme = "README.md"

[tool.setuptools.dynamic]
version = {attr = "tezos_baking.__version__"}

[tool.setuptools.packages.find]
where= ["src"]

[project.scripts]
tezos-setup = "tezos_baking.tezos_setup_wizard:main"
tezos-vote = "tezos_baking.tezos_voting_wizard:main"

[tool.tox]
legacy_tox_ini = """
  [tox]
  env_list =
    py38
    type
"""
